--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
   "devDependencies": {
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3"
+    "eslint-plugin-import": "^2.25.3",
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "eslint-config-prettier": "^8.3.0"
+    "chalk": "^5.0.0",
+    "cors": "^2.8.5",
+    "debug": "^4.3.3",
+    "eslint-config-prettier": "^8.3.0",
+    "express": "^4.17.1",
+    "inquirer": "^8.2.0",
+    "mongoose": "^6.1.2",
+    "morgan": "^1.10.0"
   }
 }
