--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^5.0.0",
     "cors": "^2.8.5",
     "debug": "^4.3.3",
+    "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
     "inquirer": "^8.2.0",
